--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "date-fns": "^2.30.0",
     "eslint": "8.46.0",
     "eslint-config-next": "13.4.13",
+    "google-fonts": "^1.0.0",
     "graphql": "^16.7.1",
     "graphql-tag": "^2.12.6",
     "next": "13.4.13",
