--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/node": "20.4.8",
     "@types/react": "18.2.18",
     "@types/react-dom": "18.2.7",
+    "@types/react-google-recaptcha": "^2.1.8",
     "autoprefixer": "10.4.14",
     "axios": "^1.4.0",
     "cors": "^2.8.5",
@@ -23,7 +24,7 @@
     "google-fonts": "^1.0.0",
     "graphql": "^16.7.1",
     "graphql-tag": "^2.12.6",
-    "next": "13.4.13",
+    "next": "^13.5.6",
     "nodemailer": "^6.9.4",
     "postcss": "8.4.27",
     "react": "18.2.0",
@@ -36,6 +37,7 @@
     "react-intersection-observer": "^9.5.2",
     "react-player": "^2.13.0",
     "react-scroll": "^1.8.9",
+    "recaptcha": "^1.2.1",
     "swiper": "^10.2.0",
     "tailwindcss": "3.3.3",
     "tailwindcss-animated": "^1.0.1",
